Add new controller and service for finding user by username in AdminController and UserServiceImpl